# IMG_Converter_Studio

./: .gitignore  HELIX.md  IMG_Converter.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_web.py
easy_img_converter/: app.py
easy_img_converter/config/: constants.py
easy_img_converter/ui/: main_window.py
tests/: test_web_backend.py  test_web_scaffold.py  test_web_static_ui.py
web_app/: README-web.md  __init__.py  cli.py
web_app/app/: main.py
web_app/app/static/: index.html
